--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # Runtime data
+package-lock.json
 pids
 *.pid
 *.seed
@@ -22,4 +23,6 @@ client/node_modules/
 # Optional eslint cache
 .eslintcache
 
-.idea/*
+.idea/
+
+client/dist/
