--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ pids
 # Dependency directories
 node_modules/
 client/node_modules/
+server/node_modules/
 
 # Optional npm cache directory
 .npm
@@ -26,3 +27,4 @@ client/node_modules/
 .idea/
 
 client/dist/
+server/public/
