--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "config": "^2.0.1",
     "vue": "^2.5.17",
+    "vue-form-wizard": "^0.8.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
