--- a/client/package.json
+++ b/client/package.json
@@ -18,18 +18,19 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
-    "babel-core": "7.0.0-bridge.0",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-e2e-nightwatch": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
+    "@vue/cli-plugin-unit-jest": "^3.0.1",
     "@vue/cli-service": "^3.0.3",
     "@vue/eslint-config-airbnb": "^3.0.3",
     "@vue/test-utils": "^1.0.0-beta.20",
-    "@vue/cli-plugin-unit-jest": "^3.0.1",
-    "vue-template-compiler": "^2.5.17",
-    "jest": "^23.6.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "jest": "^23.6.0",
     "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1"
+    "sass-loader": "^7.0.1",
+    "sinon": "^6.3.4",
+    "vue-template-compiler": "^2.5.17"
   }
 }
