--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,15 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "fs-extra": "^7.0.0",
     "jsonwebtoken": "^8.2.2",
+    "luxon": "^1.4.2",
     "morgan": "~1.9.0",
-    "rootpath": "^0.1.2"
+    "rootpath": "^0.1.2",
+    "shelljs": "^0.8.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
