--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-service": "^3.0.3",
     "@vue/eslint-config-airbnb": "^3.0.3",
     "@vue/test-utils": "^1.0.0-beta.20",
+    "axios-mock-adapter": "^1.15.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
     "jest": "^23.6.0",
