change method name in prepareData.vue add api call add file helper in server add current router in server remove index router in server refactoring feedback router in server add feedback api in server add prepare service in server change and add DIR env in server add linerc in server refactoring app.js in server

--- a/server/.env
+++ b/server/.env
@@ -3,6 +3,7 @@ CONFIG_DIR = config-train
 FEEDBACK_DIR = feedback
 MODEL_DIR = models
 PREPROCESS_DIR = preprocess
-DATA_DEFAULT_DIR = rawdata/DEFAULT
-DATA_TRAINING_DIR = rawdata/TRAINING
+DATA_DEFAULT_DIR = rawdata/default
+DATA_TRAINING_DIR = rawdata/training
+DATA_OLD_DIR = rawdata/old
 
