add json db add minLineCountInDirWithPattern method in file.js add current state in router change set current state add index.js in current change method name in prepare.js working training.js add DOCKER_DIR in .env

--- a/server/.env
+++ b/server/.env
@@ -6,4 +6,5 @@ PREPROCESS_DIR = preprocess
 DATA_DEFAULT_DIR = rawdata/default
 DATA_TRAINING_DIR = rawdata/training
 DATA_OLD_DIR = rawdata/old
+DOCKER_DIR = docker-opennmt
 
