--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-jwt": "^5.3.1",
     "fs-extra": "^7.0.0",
     "jsonwebtoken": "^8.2.2",
+    "lowdb": "^1.0.0",
     "luxon": "^1.4.2",
     "morgan": "~1.9.0",
     "rootpath": "^0.1.2",
