Move database json file add methods in file.js add translation restart add tranining restart

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 BASE_PATH = /Users/actmember/workspace/scirocco-base/
+DB_PATH = /Users/actmember/workspace/scirocco-service/database/
 CONFIG_DIR = config-train
 FEEDBACK_DIR = feedback
 MODEL_DIR = models
