Change db_path change env

--- a/server/.env
+++ b/server/.env
@@ -1,11 +1,13 @@
-BASE_PATH = /Users/actmember/workspace/scirocco-base/
-DB_PATH = /Users/actmember/workspace/scirocco-service/database/
-CONFIG_DIR = config-train
-FEEDBACK_DIR = feedback
-MODEL_DIR = models
-PREPROCESS_DIR = preprocess
-DATA_DEFAULT_DIR = rawdata/default
-DATA_TRAINING_DIR = rawdata/training
-DATA_OLD_DIR = rawdata/old
-DOCKER_DIR = docker-opennmt
+BASE_PATH = /Users/actmember/workspace/scirocco-base
+ENV = dev
+
+DB_PATH = /scirocco-service/database
+FLASK_PATH = /scirocco-yc
+FEEDBACK_DIR = /feedback
+MODEL_DIR = /models
+PREPROCESS_DIR = /preprocess
+DATA_DEFAULT_DIR = /rawdata/default
+DATA_TRAINING_DIR = /rawdata/training
+DATA_OLD_DIR = /rawdata/old
+DOCKER_DIR = /docker-opennmt
 
