remove unused 이벤트 remove sign of 잔여시간 in PrepareData.vue remove unused 버튼 (every 뷰 파일) remove unnecessary 스테이터스 코드 프로세스 종료 시 다음 화면으로 넘어갈 수 있도록 router에 추가 div 상태 computed에서 관리할 수 있도록 변경(in Restartservice.vue) add polling for restart server status 잔여 시간 대신 현재 진행 중인 epoch 숫자 표시 서버와 기능 연동 add apis in api.service.js add actions in current module add check file exists in file.js add verify, translation training/state 의 리턴 data 서버에서 조립 후 response 하도록 변경 add servers restart rest and flask server and check status

--- a/server/.env
+++ b/server/.env
@@ -10,4 +10,5 @@ DATA_DEFAULT_DIR = /rawdata/default
 DATA_TRAINING_DIR = /rawdata/training
 DATA_OLD_DIR = /rawdata/old
 DOCKER_DIR = /docker-opennmt
+END_EPOCH = 13
 
