--- a/server/.env
+++ b/server/.env
@@ -9,6 +9,6 @@ PREPROCESS_DIR = /preprocess
 DATA_DEFAULT_DIR = /rawdata/default
 DATA_TRAINING_DIR = /rawdata/training
 DATA_OLD_DIR = /rawdata/old
-DOCKER_DIR = /docker-opennmt
+DOCKER_DIR = /scirocco-docker
 END_EPOCH = 13
 
