--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "./node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -23,6 +24,8 @@
     "shelljs": "^0.8.2"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "jest": "^23.6.0",
+    "nodemon": "^1.18.4",
+    "supertest": "^3.3.0"
   }
 }
